2000-06-14-13:00 GMT +1 Ignacio Ortiz de Zuniga <ignacio@fivetech.com>
  * memoline.c
      * fixed reported bug

2000-06-13-21:20 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
  *makefile.bc
   source/rdd/makefile
      +Added dblist to dependencie list
  *doc/funclist.txt
      *updated __dblist() and __dbupdate() entries
   *source/rdd/dblist.prg
      +Source file for __dbList() and __dbUpdate functions
2000-06-13 22:47 UTC+0200 JfL&RaC <jfl@mafact.com> <rac@mafact.com>
    * Classes.c
      * Initialisation is now properly working
      * As with AutoInit for Logical (.F.) and Numerical (0) (previous TClass.prg)
    * MakeFile.bc
      * Restoring tasm call in place of tasm32 (sorry :-((( )


2000-06-13 19:55 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *include/hbapigt.h
        *added declaration of hb_gt_Suspend()/hb_gt_Resume()

    *source/rtl/gtapi.c
        *hb_gtPreExt()/hb_gtPostExt() calls driver dependend functions
        to save/restore terminal settings

    *source/rtl/run.c
        *fixed to properly use hb_gtPreExt()/hb_gtPosExt()

    *source/rtl/gtcrs/gtcrs.c
        *added full support for suspend/resume terminal settings

2000-06-13 08:08 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>

   * source/pp/ppcomp.c
     ! Minor correction - There should be no empty lines between #line directive any more.

2000-06-13 03:00 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>

   * makefile.bc
     + Added ppcomp.c and ppcore.c to list of harbour.exe dependencies.

   * source/pp/ppcore.c
   * source/compiler/harbour.y
     ! Corrected initialization of pFile->iLine to 1

   * source/pp/ppcomp.c
     ! Fixed redundant empty lines generation and line numbering.

2000-06-12 20:25 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * source/rtl/gtwin/gtwin.c
     ! Partial fix for international keyboard AltGr handling.

20000612-23:10 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/rtl/tedior.prg
     + Added GotoLine(nRow) method and a couple fixes.
