@@ -1,3 +1,8 @@
+2000-06-14 10:00 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>
+
+   * source/pp/ppcore.c
+     ! Fixed getExpReal() to terminate on unbalanced ')'
+
 2000-06-14-13:00 GMT +1 Ignacio Ortiz de Zuniga <ignacio@fivetech.com>
   * memoline.c
       * fixed reported bug
